app/styles/app.css
/* ... */
.ant-typography, .ant-typography p {
  margin-bottom: 0 !important;
  font-size: 16px;
}

.ant-typography a, a.ant-typography, a, a:hover, a:active, a:focus {
  color: rgb(var(--color-theme));
  text-decoration: underline;
}

.ant-typography u {
  text-decoration-color: rgb(var(--color-theme));
}

h4.ant-typography {
  font-size: 24px;
  font-weight: 700;
}

.selectedBtn {
  border: 2px solid rgb(var(--color-theme)) !important;
}

html {
  font-size: 16px;

  /* overflow-x: hidden; */
  /* width: 100vw; */
  /* overflow-y: scroll; */
  -ms-overflow-style: none;
  scrollbar-width: none;
}

html::-webkit-scrollbar {
  display: none;
  -webkit-appearance: none;
}

/* body {
  overflow-x: hidden;
} */

/* Tokens */
:root {
  --color-midGrey: 224 224 224;
  --color-lightGrey: 245 245 245;
  --color-blue: 0 225 255;
  --color-yellow: 225 255 104;
  --color-theme: 62 177 200;
  --color-grey: 159 159 159;
  --color-primary: 44 46 53;
  /* Text, buttons, etc. */
  --color-contrast: 255 255 255;
  /* Backgrounds, borders, etc. */
  --color-accent: 62 177 200;
  /* Labels like "On sale" */
  --font-size-fine: 0.75rem;
  /* text-xs */
  --font-size-copy: 1rem;
  /* text-base */
  --font-size-lead: 1.125rem;
  /* text-lg */
  --font-size-heading: 2rem;
  /* text-2xl */
  --font-size-display: 3rem;
  /* text-4xl */
  --color-shop-pay: #3eb1c8;
  --shop-pay-button--width: 100%;
  /* Sets the width for the shop-pay-button web component */
  --height-nav: 4rem;
  --screen-height: 100vh;
  --screen-height-dynamic: 100vh;

  @media (min-width: 640px) {
    --height-nav: 4rem;
  }

  @media (min-width: 768px) {
    --height-nav: 6rem;
    --font-size-heading: 2.25rem;
    /* text-4xl */
    --font-size-display: 3.75rem;
    /* text-6xl */
  }

  @supports (height: 100svh) {
    --screen-height: 100svh;
  }

  @supports (height: 100dvh) {
    --screen-height-dynamic: 100dvh;
  }
}

/* @media (prefers-color-scheme: dark) {
  :root {
    --color-primary: 250 250 250;
    --color-contrast: 32 33 36;
    --color-accent: 235 86 40;
  }
} */

@keyframes fadeInAnimation {
  0% {
    opacity: 0;
  }

  100% {
    opacity: 1;
  }
}

shop-pay-button {
  width: 100%;
  height: 3rem;
  display: table;
}

.ant-btn:not(:disabled):focus-visible {
  outline: none !important;
  box-shadow: none !important;
  transition: none !important;
}

.ant-carousel .slick-slide img.block {
  display: block;
}

.ant-carousel .slick-slide img.hidden {
  display: none;
}

@media (min-width: 768px) {
  .ant-carousel .slick-slide img.hidden.md\:block {
    display: block;
  }

  .ant-carousel .slick-slide img.block.md\:hidden {
    display: none;
  }
}

@layer base {
  * {
    font-variant-ligatures: none;
  }

  body {
    @apply border-primary/10 bg-contrast text-primary/90 antialiased;
  }

  html {
    scroll-padding-top: 10rem;
  }

  model-viewer::part(default-progress-mask) {
    display: none;
  }

  model-viewer::part(default-progress-bar) {
    display: none;
  }

  input[type='search']::-webkit-search-decoration,
  input[type='search']::-webkit-search-cancel-button,
  input[type='search']::-webkit-search-results-button,
  input[type='search']::-webkit-search-results-decoration {
    -webkit-appearance: none;
  }

  a.active {
    @apply border-b;
  }

  .prose {

    h1,
    h2,
    h3,
    h4,
    h5,
    h6 {
      &:first-child {
        @apply mt-0;
      }
    }
  }
}

@layer components {
  .article {

    h2,
    h3,
    h4,
    h5,
    h6 {
      @apply font-sans text-primary;
    }

    @apply prose mx-auto mb-12 grid justify-center font-serif text-primary;

    p,
    ul,
    li {
      @apply mb-4 text-lg;
    }

    img {
      @apply md:-mx-8 lg:-mx-16;

      @media (min-width: 48em) {
        width: calc(100% + 4rem);
        max-width: 100vw;
      }

      @media (min-width: 64em) {
        width: calc(100% + 8rem);
      }
    }
  }

  .swimlane {
    @apply grid w-full snap-x snap-mandatory scroll-px-6 grid-flow-col justify-start gap-4 overflow-x-scroll px-6 pb-4;
  }
}

@layer utilities {
  .fadeIn {
    opacity: 0;
    animation: fadeInAnimation ease 500ms forwards;
  }

  .hiddenScroll {
    scrollbar-width: none;

    &::-webkit-scrollbar {
      display: none;
    }
  }

  .absolute-center {
    @apply absolute top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2;
  }

  .strike {
    position: relative;

    &::before {
      content: '';
      display: block;
      position: absolute;
      width: 108%;
      height: 1.5px;
      left: -4%;
      top: 50%;
      transform: translateY(-50%);
      background: rgb(var(--color-primary));
      box-shadow: 0.5px 0.5px 0px 0.5px rgb(var(--color-contrast));
    }
  }

  .card-image {
    @apply relative flex items-center justify-center overflow-clip rounded;

    &::before {
      content: ' ';
      @apply absolute top-0 left-0 z-10 block h-full w-full rounded shadow-border;
    }

    img {
      @apply aspect-[inherit] w-full object-cover;
    }
  }
}

/* Custom CSS for antd */
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-submenu-title:active,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-submenu-title:hover,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-item:not(.ant-menu-item-selected):active,
.ant-menu-light:not(.ant-menu-horizontal) .ant-menu-item:not(.ant-menu-item-selected):hover,
.ant-menu-light.ant-menu-inline .ant-menu-sub.ant-menu-inline,
.ant-menu-light>.ant-menu.ant-menu-inline .ant-menu-sub.ant-menu-inline {
  background-color: transparent !important;
}

.ant-menu-submenu i.ant-menu-submenu-arrow::before {
  content: url('/app/assets/arrow-closed.svg');
  transform: none;
  position: initial;
  background-color: transparent;
  border-radius: 0;
  transition: none;
  line-height: 1;
  height: 15px;
}
/* ... */

